# stock-FOMO

./: PROGRESS.md  README.md
scrape_jobs/: .gitignore  Cargo.toml  main.py  pyproject.toml
scrape_jobs/article-crawler/: .eslintrc  .gitignore  .puppeteerrc.cjs  README.md  jest.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo
scrape_jobs/article-crawler/.actor/: actor.json  input_schema.json
scrape_jobs/article-crawler/.cursor/rules/: git-commit-message.mdc
scrape_jobs/article-crawler/development/: git-commit-msg-template.md
scrape_jobs/article-crawler/prisma/: schema.prisma
scrape_jobs/article-crawler/src/: main.ts  quicktest.ts  routes.ts  utils.ts
scrape_jobs/article-crawler/src/Crawleer/: PrometheusLogger.ts
scrape_jobs/article-crawler/src/Crawlers/: ArticleCrawler.ts
scrape_jobs/article-crawler/src/PuppetAct/: CSSselectors.ts
scrape_jobs/article-crawler/src/PuppetAct/ActConfig/: CSSselectors.ts  CategoryURLS.ts  DesiredURLs.ts  UndesiredURLs.ts  index.ts
scrape_jobs/article-crawler/src/PuppetAct/ArticlesAct/: CNBCAct.ts  ReutersAct.ts  ScrapeStatusHandler.ts  index.ts  schemas.ts
scrape_jobs/article-crawler/src/PuppetShow/PuppetMaster/: ComplexMaster.ts  NoobMaster.ts  index.ts
scrape_jobs/article-crawler/src/PuppetShow/ScrapeMaster/: CheerioMaster.ts  PuppetMaster.ts  index.ts
scrape_jobs/article-crawler/src/PuppetShow/ScrapedElement.ts/: CheerioScrapedElement.ts  ComplexScrapedElement.ts  (+3 more)
scrape_jobs/article-crawler/src/db/: client.ts
scrape_jobs/article-crawler/tests/Actor/: input.json
(+57 files in other folders)
