[tool.poetry]
name = "scrape-jobs"
version = "0.1.0"
description = ""
authors = ["huynv44 <huyk25sinh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
crawlee = {extras = ["playwright", "beautifulsoup"], version = "^0.3.8"}
polars = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
